Description pictures PIkasle

--- a/pikasle_en.html
+++ b/pikasle_en.html
@@ -66,7 +66,7 @@
 <div class="jumbotron">
       <div class="container">
         <center>
-        <h3>Revista</h3><img width=30% src="pikasle/logopikasle.png" alt="logo of PIkasle"/><h3>Aldizkaria</h3>
+        <h3>Revista</h3><img width=30% src="pikasle/logopikasle.png" alt="Logo of PIkasle"/><h3>Aldizkaria</h3>
         </center>
 
      </div>
@@ -303,7 +303,7 @@ Below we provide a list of the people who belong to each of these groups, ordere
 </p></div>
 
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/fotogrupo2014.JPG"><img style="width:90%;" src="pikasle/fotogrupo2014red.JPG" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2012-13"/></a>
+<a href="pikasle/fotogrupo2014.JPG"><img style="width:90%;" src="pikasle/fotogrupo2014red.JPG" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2013-14"/></a>
 <p style="margin:0;"><em>Team of collaborators</em> of $\pi kasle$<br>at the end of the academic year 2013-14
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
@@ -464,7 +464,7 @@ This literary contest consisted in writing a story in 37 words or fewer, and was
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-6" style="text-align:center;padding-top: 3%;">
-<img style="width:68%;" src="pikasle/infinitesimales1.jpg" alt="Poster of I. Concurso de Relatos Infinitesimales / Eleberri Infinitesimalak I. Lehiaketa"/>
+<img style="width:68%;" src="pikasle/infinitesimales1.jpg" alt="Poster of the I. Concurso de Relatos Infinitesimales / Eleberri Infinitesimalak I. Lehiaketa"/>
 <p style="margin:0;">Poster of the contest
 </p></div>
 <div class="col-md-3" style="text-align:center;padding-top: 3%;">
@@ -651,7 +651,7 @@ The magazine obtained two prizes in recognition of its achievements:
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<img style="width:90%;" src="pikasle/premio0.jpg" alt="Ricardo, Josué y Esther Domínguez, then Dean of the ZTF-FCT, in the ceremony of the III Prizes to students who have best boradcasted the image of the University of the Basque Country"/>
+<img style="width:90%;" src="pikasle/premio0.jpg" alt="Ricardo, Josué and Esther Domínguez, then Dean of the ZTF-FCT, in the ceremony of the III Prizes to students who have best boradcasted the image of the University of the Basque Country"/>
 <p style="margin:0;">
 Ricardo, Josué and Esther Domínguez,<br>then dean of the ZTF-FCT,<br>in the awards ceremony<br>of the University of the Basque Country
 </p>
@@ -714,7 +714,7 @@ After the first year, PIkasle became established and was ready to take more peop
 </div>
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design0.png"><img style="width:90%;" src="pikasle/design0.png" alt="Logo of PIkasle"/></a>
+<a href="pikasle/design0.png"><img style="width:90%;" src="pikasle/design0.png" alt="Logo of PIkasle (by Maitane Amor)"/></a>
 <p style="margin:0;">
 Logo of $\pi kasle$<br><small>(Design by Maitane Amor)</small>
 </p>
@@ -770,7 +770,7 @@ This picture was the back cover of the third printed number of $\pi kasle$. It r
 <br>
 <footer>
 <hr>
-  <p style="text-align:center;"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> All the content of $\pi kasle$ is licensed under a <a style="color:white;" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.<br>Text by Josué Tonelli-Cueto, translation by Ricardo Grande</p>
+  <p style="text-align:center;"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> All the content of $\pi kasle$ is licensed under a <a style="color:white;" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.<br>Text by Josué Tonelli-Cueto, translation by Ricardo Grande</p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
 
