--- a/pikasle_es.html
+++ b/pikasle_es.html
@@ -66,7 +66,7 @@
 <div class="jumbotron">
       <div class="container">
         <center>
-        <h3>Revista</h3><img width=30% src="pikasle/logopikasle.png" alt="logo of PIkasle"/><h3>Aldizkaria</h3>
+        <h3>Revista</h3><img width=30% src="pikasle/logopikasle.png" alt="Logo de PIkasle"/><h3>Aldizkaria</h3>
         </center>
 
      </div>
@@ -102,19 +102,19 @@ De los 10 números digitales de $\pi kasle$, cuatro se publicaron en año acadé
 
 <div class="row" style="padding-top:2em;">
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle01.pdf"><img style="width:90%;" src="pikasle/portada01red.jpg" alt="Cover of Issue N. 1 of PIkasle"/></a>
+<a href="pikasle/PIkasle01.pdf"><img style="width:90%;" src="pikasle/portada01red.jpg" alt="Cubierta del Número 1 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 1<br>Octubre 2011</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle01.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada01.jpg">&ensp;Cubierta del número&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle02.pdf"><img style="width:90%;" src="pikasle/portada02red.jpg" alt="Cover of Issue N. 2 of PIkasle"/></a>
+<a href="pikasle/PIkasle02.pdf"><img style="width:90%;" src="pikasle/portada02red.jpg" alt="Cubierta del Número 2 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 2<br>Noviember-Diciembre 2011</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle02.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada02.jpg">&ensp;Cubierta del número&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle03.pdf"><img style="width:90%;" src="pikasle/portada03red.jpg" alt="Cover of Issue N. 3 of PIkasle"/></a>
+<a href="pikasle/PIkasle03.pdf"><img style="width:90%;" src="pikasle/portada03red.jpg" alt="Cubierta del Número 3 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 3<br>Enero-Febrero 2012</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle03.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada03.jpg">&ensp;Cubierta del número&ensp;</a></span>
@@ -124,19 +124,19 @@ De los 10 números digitales de $\pi kasle$, cuatro se publicaron en año acadé
 
 <div class="row" style="padding-top:3em;">
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle04.pdf"><img style="width:90%;" src="pikasle/portada04red.jpg" alt="Cover of Issue N. 4 of PIkasle"/></a>
+<a href="pikasle/PIkasle04.pdf"><img style="width:90%;" src="pikasle/portada04red.jpg" alt="Cubierta del Número 4 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 4<br>Marzo-Abril 2012</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle04.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada04.jpg">&ensp;Cubierta del número&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle05.pdf"><img style="width:90%;" src="pikasle/portada05red.jpg" alt="Cover of Issue N. 5 of PIkasle"/></a>
+<a href="pikasle/PIkasle05.pdf"><img style="width:90%;" src="pikasle/portada05red.jpg" alt="Cubierta del Número 5 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 5<br>Septiembre-Octubre 2012</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle05.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada05.jpg">&ensp;Cubierta del número&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle06.pdf"><img style="width:90%;" src="pikasle/portada06red.jpg" alt="Cover of Issue N. 6 of PIkasle"/></a>
+<a href="pikasle/PIkasle06.pdf"><img style="width:90%;" src="pikasle/portada06red.jpg" alt="Cubierta del Número 6 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 6<br>Noviembre-Diciembre 2012/Enero 2013</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle06.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada06.jpg">&ensp;Cubierta del número&ensp;</a></span>
@@ -146,19 +146,19 @@ De los 10 números digitales de $\pi kasle$, cuatro se publicaron en año acadé
 
 <div class="row" style="padding-top:3em;">
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle07.pdf"><img style="width:90%;" src="pikasle/portada07red.jpg" alt="Cover of Issue N. 7 of PIkasle"/></a>
+<a href="pikasle/PIkasle07.pdf"><img style="width:90%;" src="pikasle/portada07red.jpg" alt="Cubierta del Número 7 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 7<br>Febrero-Marzo-Abril-Mayo 2013</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle07.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada07.jpg">&ensp;Cubierta del número&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle08.pdf"><img style="width:90%;" src="pikasle/portada08red.jpg" alt="Cover of Issue N. 8 of PIkasle"/></a>
+<a href="pikasle/PIkasle08.pdf"><img style="width:90%;" src="pikasle/portada08red.jpg" alt="Cubierta del Número 8 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 8<br>Septiembre-Octubre 2012</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle08.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada08.jpg">&ensp;Cubierta del número&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle09.pdf"><img style="width:90%;" src="pikasle/portada09red.jpg" alt="Cover of Issue N. 9 of PIkasle"/></a>
+<a href="pikasle/PIkasle09.pdf"><img style="width:90%;" src="pikasle/portada09red.jpg" alt="Cubierta del Número 9 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 9<br>Noviembre-Diciembre 2013/Enero 2014</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle09.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada09.jpg">&ensp;Cubierta del número&ensp;</a></span>
@@ -169,7 +169,7 @@ De los 10 números digitales de $\pi kasle$, cuatro se publicaron en año acadé
 <div class="col-md-4" style="text-align:center;">
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle10.pdf"><img style="width:90%;" src="pikasle/portada10red.jpg" alt="Cover of Issue N. 10 of PIkasle"/></a>
+<a href="pikasle/PIkasle10.pdf"><img style="width:90%;" src="pikasle/portada10red.jpg" alt="Cubierta del Número 10 de PIkasle"/></a>
 <p style="margin:0;"><b>$\pi kasle$ Número 10<br>Enero2014/Junio 2014</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle10.pdf">&ensp;PDF del número&ensp;</a>
 <a style="float:right;" href="pikasle/portada10.jpg">&ensp;Cubierta del número&ensp;</a></span>
@@ -287,23 +287,23 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
 
 <div class="row" style="padding-top:3em;">
 <div class="col-md-5" style="text-align:center;padding-top: 0.8%;">
-<a href="pikasle/fotogrupo2012.jpg"><img style="width:90%;" src="pikasle/fotogrupo2012red.jpg" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2011-12"/></a>
+<a href="pikasle/fotogrupo2012.jpg"><img style="width:90%;" src="pikasle/fotogrupo2012red.jpg" alt="Equipo de Colaboradores de PIkasle a finales del curso académico 2011-12"/></a>
 <p style="margin:0;"><em>Equipo de Colaboradores</em> de $\pi kasle$<br>a finales del curso académico 2011-12
 </p></div>
 <div class="col-md-7" style="text-align:center;">
-<a href="pikasle/fotogrupo2013.jpg"><img style="width:90%;" src="pikasle/fotogrupo2013red.jpg" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2012-13"/></a>
+<a href="pikasle/fotogrupo2013.jpg"><img style="width:90%;" src="pikasle/fotogrupo2013red.jpg" alt="Equipo de Colaboradores de PIkasle a finales del curso académico 2012-13"/></a>
 <p style="margin:0;"><em>Equipo de Colaboradores</em> de $\pi kasle$<br>a finales del curso académico 2012-13
 </p></div>
 </div>
 
 <div class="row" style="padding-top:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 0.8%;">
-<a href="pikasle/fotogrupo2013B.JPG"><img style="width:90%;" src="pikasle/fotogrupo2013Bred.JPG" alt="Group picture of the collaborators of PIkasle at one party on May of 2013"/></a>
-<p style="margin:0;"><em>Equipo de Colaboradores</em> de $\pi kasle$<br>en una celebración en mayo de 2013
+<a href="pikasle/fotogrupo2013B.JPG"><img style="width:90%;" src="pikasle/fotogrupo2013Bred.JPG" alt="Equipo de Colaboradores de PIkasle en una fiesta en mayo del 2013"/></a>
+<p style="margin:0;"><em>Equipo de Colaboradores</em> de $\pi kasle$<br>en una celebración en mayo del 2013
 </p></div>
 
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/fotogrupo2014.JPG"><img style="width:90%;" src="pikasle/fotogrupo2014red.JPG" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2012-13"/></a>
+<a href="pikasle/fotogrupo2014.JPG"><img style="width:90%;" src="pikasle/fotogrupo2014red.JPG" alt="Equipo de Colaboradores de PIkasle a finales del curso académico 2013-14"/></a>
 <p style="margin:0;"><em>Equipo de Colaboradores</em> de $\pi kasle$<br>a finales del curso académico 2013-14
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
@@ -522,11 +522,11 @@ El evento fue organizado por Josué Tonelli Cueto y fue realizado el siguiente e
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-2" style="text-align:center;padding-top: 3%;"></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardner00.jpg" alt="Poster of PIkasle's Martin Gardner Celebration of Mind"/>
+<img style="width:90%;" src="pikasle/gardner00.jpg" alt="Poster de la PIkasle's Martin Gardner Celebration of Mind"/>
 <p style="margin:0;">Poster of<br><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 4.5%;">
-<img style="width:90%;" src="pikasle/gardner01.png" alt="Logo at PIkasle's Martin Gardner Celebration of Mind"/>
+<img style="width:90%;" src="pikasle/gardner01.png" alt="Logo de la PIkasle's Martin Gardner Celebration of Mind"/>
 <p style="margin:0;">Logo of<br><em>$\pi$kasle's Martin Gardner Celebration of Mind</em>
 </p></div>
 <div class="col-md-2" style="text-align:center;padding-top: 3%;"></div>
@@ -534,45 +534,45 @@ El evento fue organizado por Josué Tonelli Cueto y fue realizado el siguiente e
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardner1.JPG" alt="Participants at PIkasle's Martin Gardner Celebration of Mind"/>
+<img style="width:90%;" src="pikasle/gardner1.JPG" alt="Participantes en la PIkasle's Martin Gardner Celebration of Mind"/>
 <p style="margin:0;">
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardner2.JPG" alt="Flexagons"/>
+<img style="width:90%;" src="pikasle/gardner2.JPG" alt="Flexágonos"/>
 <p style="margin:0;">
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardner3.JPG" alt="Participants at PIkasle's Martin Gardner Celebration of Mind"/>
-<p style="margin:0;">
-</p></div>
-</div>
-
-<div class="row" style="padding-bottom:2em;">
-<div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardner4.JPG" alt="Participants at PIkasle's Martin Gardner Celebration of Mind"/>
-<p style="margin:0;">
-</p></div>
-<div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardner6.JPG" alt="Participants at PIkasle's Martin Gardner Celebration of Mind"/>
-<p style="margin:0;">
-</p></div>
-<div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardner5.JPG" alt="Julio Garcia (Puño de Hierro) at PIkasle's Martin Gardner Celebration of Mind"/>
+<img style="width:90%;" src="pikasle/gardner3.JPG" alt="Participantes en la PIkasle's Martin Gardner Celebration of Mind"/>
 <p style="margin:0;">
 </p></div>
 </div>
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardner7.JPG" alt="Participants at PIkasle's Martin Gardner Celebration of Mind"/>
+<img style="width:90%;" src="pikasle/gardner4.JPG" alt="Participantes en la PIkasle's Martin Gardner Celebration of Mind"/>
 <p style="margin:0;">
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardner8.JPG" alt="Participants at PIkasle's Martin Gardner Celebration of Mind"/>
+<img style="width:90%;" src="pikasle/gardner6.JPG" alt="Participantes en la PIkasle's Martin Gardner Celebration of Mind"/>
 <p style="margin:0;">
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/gardnerT.JPG" alt="Team that made the PIkasle's Martin Gardner Celebration of Mind"/>
+<img style="width:90%;" src="pikasle/gardner5.JPG" alt="Julio Garcia (Puño de Hierro) en la PIkasle's Martin Gardner Celebration of Mind"/>
+<p style="margin:0;">
+</p></div>
+</div>
+
+<div class="row" style="padding-bottom:2em;">
+<div class="col-md-4" style="text-align:center;padding-top: 3%;">
+<img style="width:90%;" src="pikasle/gardner7.JPG" alt="Participantes en la PIkasle's Martin Gardner Celebration of Mind"/>
+<p style="margin:0;">
+</p></div>
+<div class="col-md-4" style="text-align:center;padding-top: 3%;">
+<img style="width:90%;" src="pikasle/gardner8.JPG" alt="Participantes en la PIkasle's Martin Gardner Celebration of Mind"/>
+<p style="margin:0;">
+</p></div>
+<div class="col-md-4" style="text-align:center;padding-top: 3%;">
+<img style="width:90%;" src="pikasle/gardnerT.JPG" alt="Equipo que hizo la PIkasle's Martin Gardner Celebration of Mind"/>
 <p style="margin:0;">
 </p></div>
 </div>
@@ -583,11 +583,11 @@ Junto con el <em>$\pi$kasle's Martin Gardner Celebration of Mind</em>, se convoc
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-5" style="text-align:center;padding-top: 1em;">
-<img style="width:90%;" src="pikasle/gardnercon1.JPG" alt="Adiran Garaizar and Nerea Arrarte together with Ricardo Gande and Josu&eacute; Tonelli Cueto"/>
+<img style="width:90%;" src="pikasle/gardnercon1.JPG" alt="Adiran Garaizar y Nerea Arrarte junto con Ricardo Gande and Josu&eacute; Tonelli Cueto"/>
 <p style="margin:0;">Editores Josué Tonelli Cueto y Ricardo Grande,<br>con los ganadores Nerea Arrarte y Adiran Garaizar
 </p></div>
 <div class="col-md-7" style="text-align:center;">
-<img style="width:90%;" src="pikasle/g0.jpg" alt="Flexicube of Adiran Garaizar and Nerea Arrarte"/>
+<img style="width:90%;" src="pikasle/g0.jpg" alt="Flexicubo de Adiran Garaizar y Nerea Arrarte"/>
 <p style="margin:0;">
 Flexicubo expuesto en la Facultad de Ciencia y Tecnología de la UPV/EHU
 </p></div>
@@ -595,14 +595,14 @@ Flexicubo expuesto en la Facultad de Ciencia y Tecnología de la UPV/EHU
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<img style="width:90%;" src="pikasle/g1.jpg" alt="Flexicube of Adiran Garaizar and Nerea Arrarte"/>
+<img style="width:90%;" src="pikasle/g1.jpg" alt="Flexicubo de Adiran Garaizar y Nerea Arrarte"/>
 </div>
 <div class="col-md-3" style="text-align:center;">
-<img style="width:90%;" src="pikasle/g2.jpg" alt="Flexicube of Adiran Garaizar and Nerea Arrarte"/>
+<img style="width:90%;" src="pikasle/g2.jpg" alt="Flexicubo de Adiran Garaizar y Nerea Arrarte"/>
 <p style="margin:0;">
 </p></div>
 <div class="col-md-5" style="text-align:center;padding-top: 6%;">
-<img style="width:90%;" src="pikasle/g3.jpg" alt="Flexicube of Adiran Garaizar and Nerea Arrarte"/>
+<img style="width:90%;" src="pikasle/g3.jpg" alt="Flexicubo de Adiran Garaizar y Nerea Arrarte"/>
 <p style="margin:0;">
 </p></div>
 </div>
@@ -619,18 +619,18 @@ El workshop fue organizado por Ricardo Grande y Josué Tonelli Cueto. Este tuvo 
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:60%;" src="pikasle/pi_card.png" alt="PI of clubs"/>
+<img style="width:60%;" src="pikasle/pi_card.png" alt="PI de tréboles"/>
 <p style="margin:0;">
 <em>$\pi$ de tréboles</em>,
 logo del workshop<br><small>(Diseño de Josué Tonelli Cueto)</small>
 </p>
 </div>
 <div class="col-md-4" style="text-align:center;padding-top: 6.5%;">
-<img style="width:90%;" src="pikasle/workshop2.jpg" alt="Juan Carlos Ruiz de Arcaute in the workshop"/>
+<img style="width:90%;" src="pikasle/workshop2.jpg" alt="Juan Carlos Ruiz de Arcaute en el taller"/>
 <p style="margin:0;">Juan Carlos Ruiz de Arcaute en el taller<br><small>(&copy;2014 Izaskun Lekuona)</small>
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 6.5%;">
-<img style="width:90%;" src="pikasle/workshop3.jpg" alt="Pedro Alegría in the workshop"/>
+<img style="width:90%;" src="pikasle/workshop3.jpg" alt="Pedro Alegría en el taller"/>
 <p style="margin:0;">Pedro Alegría en el taller
 </p></div>
 </div>
@@ -718,7 +718,7 @@ De este modo, al llegar al final de su primer año, la revista $\pi kasle$ se ha
 </div>
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design0.png"><img style="width:90%;" src="pikasle/design0.png" alt="Logo de PIkasle"/></a>
+<a href="pikasle/design0.png"><img style="width:90%;" src="pikasle/design0.png" alt="Logo de PIkasle (por Maitane Amor)"/></a>
 <p style="margin:0;">
 Logo de $\pi kasle$<br><small>(Diseño de Maitane Amor)</small>
 </p>
@@ -741,7 +741,7 @@ Julio García, miembro del Comité Asesor de $\pi kasle$, era el encargado de ve
 <div class="row" style="padding-bottom:2em;">
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design1.jpg"><img style="width:90%;" src="pikasle/design1.jpg" alt="Paul Erd&ouml;s a la Warhol (by Josué Tonelli Cueto)"/></a>
+<a href="pikasle/design1.jpg"><img style="width:90%;" src="pikasle/design1.jpg" alt="Paul Erd&ouml;s a la Warhol (por Josué Tonelli Cueto)"/></a>
 <p style="margin:0;">
 Paul Erdös <em>&agrave; la Warhol</em><br><small>(Diseño de Josué Tonelli Cueto)</small>
 </p>
@@ -750,7 +750,7 @@ Esta imagen fue la portada del séptimo número y del segundo número impreso de
 </p></div>
 
 <div id="designs" class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design2.png"><img style="width:90%;" src="pikasle/design2.png" alt="The Categoricist (by Josué Tonelli Cueto)"/></a>
+<a href="pikasle/design2.png"><img style="width:90%;" src="pikasle/design2.png" alt="The Categoricist (por Josué Tonelli Cueto)"/></a>
 <p style="margin:0;padding-top:0.7em;">
 <em>The Categoricist</em><br><small>(Diseño de Josué Tonelli Cueto)</small>
 </p>
@@ -759,7 +759,7 @@ Esta figura fue la portada del noveno número y del tercer número impreso de $\
 </p></div>
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design3.png"><img style="width:90%;" src="pikasle/design3.png" alt="Doctor Delta (by Josué Tonelli Cueto)"/></a>
+<a href="pikasle/design3.png"><img style="width:90%;" src="pikasle/design3.png" alt="Doctor Delta (por Josué Tonelli Cueto)"/></a>
 <p style="margin:0;padding-top:0.7em;">
 <em>Doctor Delta</em><br><small>(Diseño de Josué Tonelli Cueto)</small>
 </p>
