--- a/pikasle_eus.html
+++ b/pikasle_eus.html
@@ -66,7 +66,7 @@
 <div class="jumbotron">
       <div class="container">
         <center>
-        <h3>Revista</h3><img width=30% src="pikasle/logopikasle.png" alt="logo of PIkasle"/><h3>Aldizkaria</h3>
+        <h3>Revista</h3><img width=30% src="pikasle/logopikasle.png" alt="PIkasle-ren logoa"/><h3>Aldizkaria</h3>
         </center>
      </div>
 </div>
@@ -104,19 +104,19 @@ $\pi kasle$ren 10 zenbaki digitaletako, 2011-12 ikasurtean lau argitaratu ziren,
 
 <div class="row" style="padding-top:2em;">
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle01.pdf"><img style="width:90%;" src="pikasle/portada01red.jpg" alt="Cover of Issue N. 1 of PIkasle"/></a>
+<a href="pikasle/PIkasle01.pdf"><img style="width:90%;" src="pikasle/portada01red.jpg" alt="PIkasle-ren 1. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 1. Zenakia<br>2011ko Urria</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle01.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada01.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle02.pdf"><img style="width:90%;" src="pikasle/portada02red.jpg" alt="Cover of Issue N. 2 of PIkasle"/></a>
+<a href="pikasle/PIkasle02.pdf"><img style="width:90%;" src="pikasle/portada02red.jpg" alt="PIkasle-ren 2. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 2. Zenbakia<br>2011ko Azaroa-Abdendua</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle02.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada02.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle03.pdf"><img style="width:90%;" src="pikasle/portada03red.jpg" alt="Cover of Issue N. 3 of PIkasle"/></a>
+<a href="pikasle/PIkasle03.pdf"><img style="width:90%;" src="pikasle/portada03red.jpg" alt="PIkasle-ren 3. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 3. Zenbakia<br>2012ko Urtarrila-Otsaila</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle03.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada03.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
@@ -126,19 +126,19 @@ $\pi kasle$ren 10 zenbaki digitaletako, 2011-12 ikasurtean lau argitaratu ziren,
 
 <div class="row" style="padding-top:3em;">
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle04.pdf"><img style="width:90%;" src="pikasle/portada04red.jpg" alt="Cover of Issue N. 4 of PIkasle"/></a>
+<a href="pikasle/PIkasle04.pdf"><img style="width:90%;" src="pikasle/portada04red.jpg" alt="PIkasle-ren 4. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 4. Zenbakia<br>2012ko Martzoa-Apirila</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle04.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada04.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle05.pdf"><img style="width:90%;" src="pikasle/portada05red.jpg" alt="Cover of Issue N. 5 of PIkasle"/></a>
+<a href="pikasle/PIkasle05.pdf"><img style="width:90%;" src="pikasle/portada05red.jpg" alt="PIkasle-ren 5. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 5.Zenbakia<br>2012ko Iraila-Urria</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle05.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada05.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle06.pdf"><img style="width:90%;" src="pikasle/portada06red.jpg" alt="Cover of Issue N. 6 of PIkasle"/></a>
+<a href="pikasle/PIkasle06.pdf"><img style="width:90%;" src="pikasle/portada06red.jpg" alt="PIkasle-ren 6. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 6. Zenbakia<br>2012ko Azaroa-Abendua/2013ko Urtarrila</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle06.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada06.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
@@ -148,19 +148,19 @@ $\pi kasle$ren 10 zenbaki digitaletako, 2011-12 ikasurtean lau argitaratu ziren,
 
 <div class="row" style="padding-top:3em;">
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle07.pdf"><img style="width:90%;" src="pikasle/portada07red.jpg" alt="Cover of Issue N. 7 of PIkasle"/></a>
+<a href="pikasle/PIkasle07.pdf"><img style="width:90%;" src="pikasle/portada07red.jpg" alt="PIkasle-ren 7. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 7. Zenbakia<br>2013ko Otsaila-Martzoa-Apirila-Maiatza</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle07.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada07.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle08.pdf"><img style="width:90%;" src="pikasle/portada08red.jpg" alt="Cover of Issue N. 8 of PIkasle"/></a>
+<a href="pikasle/PIkasle08.pdf"><img style="width:90%;" src="pikasle/portada08red.jpg" alt="PIkasle-ren 8. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 8. Zenbakia<br>2012ko Iraila-Urria</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle08.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada08.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle09.pdf"><img style="width:90%;" src="pikasle/portada09red.jpg" alt="Cover of Issue N. 9 of PIkasle"/></a>
+<a href="pikasle/PIkasle09.pdf"><img style="width:90%;" src="pikasle/portada09red.jpg" alt="PIkasle-ren 9. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 9. Zenbakia<br>2013ko Azaroa-Abendua/2014ko Urtarrila</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle09.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada09.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
@@ -171,7 +171,7 @@ $\pi kasle$ren 10 zenbaki digitaletako, 2011-12 ikasurtean lau argitaratu ziren,
 <div class="col-md-4" style="text-align:center;">
 </div>
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/PIkasle10.pdf"><img style="width:90%;" src="pikasle/portada10red.jpg" alt="Cover of Issue N. 10 of PIkasle"/></a>
+<a href="pikasle/PIkasle10.pdf"><img style="width:90%;" src="pikasle/portada10red.jpg" alt="PIkasle-ren 10. zenbakiaren azala"/></a>
 <p style="margin:0;"><b>$\pi kasle$ren 10. Zenbakia<br>2014ko Urtarrila/2014ko Ekaina</b>
 </p><span><a style="float:left;" href="pikasle/PIkasle10.pdf">&ensp;Zenbakiaren PDFa&ensp;</a>
 <a style="float:right;" href="pikasle/portada10.jpg">&ensp;Zenbakiaren azala&ensp;</a></span>
@@ -289,23 +289,23 @@ A continuación se listan las personas pertenecientes a cada uno de los grupos e
 
 <div class="row" style="padding-top:3em;">
 <div class="col-md-5" style="text-align:center;padding-top: 0.8%;">
-<a href="pikasle/fotogrupo2012.jpg"><img style="width:90%;" src="pikasle/fotogrupo2012red.jpg" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2011-12"/></a>
+<a href="pikasle/fotogrupo2012.jpg"><img style="width:90%;" src="pikasle/fotogrupo2012red.jpg" alt="PIkasle-ren taldea 2011-12 ikasurte amaieran"/></a>
 <p style="margin:0;">$\pi kasle$ren <em>taldea</em><br>2011-12 ikasurte amaieran
 </p></div>
 <div class="col-md-7" style="text-align:center;">
-<a href="pikasle/fotogrupo2013.jpg"><img style="width:90%;" src="pikasle/fotogrupo2013red.jpg" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2012-13"/></a>
+<a href="pikasle/fotogrupo2013.jpg"><img style="width:90%;" src="pikasle/fotogrupo2013red.jpg" alt="PIkasle-ren taldea 2012-13 ikasurte amaieran"/></a>
 <p style="margin:0;">$\pi kasle$ren <em>taldea</em><br>2012-13 ikasurte amaieran
 </p></div>
 </div>
 
 <div class="row" style="padding-top:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 0.8%;">
-<a href="pikasle/fotogrupo2013B.JPG"><img style="width:90%;" src="pikasle/fotogrupo2013Bred.JPG" alt="Group picture of the collaborators of PIkasle at one party on May of 2013"/></a>
+<a href="pikasle/fotogrupo2013B.JPG"><img style="width:90%;" src="pikasle/fotogrupo2013Bred.JPG" alt="PIkasle-ren taldea 2013ko maiatzaren ospakizun batean"/></a>
 <p style="margin:0;">$\pi kasle$ren <em>taldea</em><br>2013ko maiatzaren ospakizun batean
 </p></div>
 
 <div class="col-md-4" style="text-align:center;">
-<a href="pikasle/fotogrupo2014.JPG"><img style="width:90%;" src="pikasle/fotogrupo2014red.JPG" alt="Group picture of the collaborators of PIkasle at the end of the academic year 2012-13"/></a>
+<a href="pikasle/fotogrupo2014.JPG"><img style="width:90%;" src="pikasle/fotogrupo2014red.JPG" alt="PIkasle-ren taldea 2013-14 ikasurte amaieran"/></a>
 <p style="margin:0;">$\pi kasle$ren <em>taldea</em><br>2013-14 ikasurte amaieran
 </p></div>
 
@@ -467,15 +467,15 @@ Este concurso literario consistía en escribir un relato de 37 palabras o menos 
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-6" style="text-align:center;padding-top: 3%;">
-<img style="width:68%;" src="pikasle/infinitesimales1.jpg" alt="Poster of I. Concurso de Relatos Infinitesimales / Eleberri Infinitesimalak I. Lehiaketa"/>
+<img style="width:68%;" src="pikasle/infinitesimales1.jpg" alt="I. Concurso de Relatos Infinitesimales / Eleberri Infinitesimalak I. Lehiaketaren posterra"/>
 <p style="margin:0;">Lehiaketaren posterra
 </p></div>
 <div class="col-md-3" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/infinitesimales2.JPG" alt="Oihane Ruiz Díaz, winner in the Spanish category"/>
+<img style="width:90%;" src="pikasle/infinitesimales2.JPG" alt="Oihane Ruiz Díaz, gaztelaniazko modalitatearen irabazlea"/>
 <p style="margin:0;">Oihane Ruiz Díaz,<br>gaztelaniazko modalitatearen irabazlea
 </p></div>
 <div class="col-md-3" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/infinitesimales3.jpg" alt="MariJoxe Azurtza Sorrondegi, winner in the Basque category"/>
+<img style="width:90%;" src="pikasle/infinitesimales3.jpg" alt="MariJoxe Azurtza Sorrondegi, euskerazko modalitatearen irabazlea"/>
 <p style="margin:0;">MariJoxe Azurtza Sorrondegi,<br>euskerazko modalitatearen irabazlea
 </p></div>
 </div>
@@ -586,11 +586,11 @@ Junto con el <em>$\pi$kasle's Martin Gardner Celebration of Mind</em>, se convoc
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-5" style="text-align:center;padding-top: 1em;">
-<img style="width:90%;" src="pikasle/gardnercon1.JPG" alt="Adiran Garaizar and Nerea Arrarte together with Ricardo Gande and Josu&eacute; Tonelli Cueto"/>
+<img style="width:90%;" src="pikasle/gardnercon1.JPG" alt="Adiran Garaizar eta Nerea Arrarte Ricardo Gande and Josu&eacute; Tonelli Cueto-rekin"/>
 <p style="margin:0;">Editoreak Josué Tonelli Cueto eta Ricardo Grande<br>Nerea Arrarte eta Adiran Garaizar irabazleekin
 </p></div>
 <div class="col-md-7" style="text-align:center;">
-<img style="width:90%;" src="pikasle/g0.jpg" alt="Flexicube of Adiran Garaizar and Nerea Arrarte"/>
+<img style="width:90%;" src="pikasle/g0.jpg" alt="Adiran Garaizar and Nerea Arrarte-ren Flexikuboa"/>
 <p style="margin:0;">
 UPV/EHUko Zientzia eta Teknologia Fakultatean azaldutako flexikuboa
 </p></div>
@@ -598,14 +598,14 @@ UPV/EHUko Zientzia eta Teknologia Fakultatean azaldutako flexikuboa
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<img style="width:90%;" src="pikasle/g1.jpg" alt="Flexicube of Adiran Garaizar and Nerea Arrarte"/>
+<img style="width:90%;" src="pikasle/g1.jpg" alt="Adiran Garaizar and Nerea Arrarte-ren Flexikuboa"/>
 </div>
 <div class="col-md-3" style="text-align:center;">
-<img style="width:90%;" src="pikasle/g2.jpg" alt="Flexicube of Adiran Garaizar and Nerea Arrarte"/>
+<img style="width:90%;" src="pikasle/g2.jpg" alt="Adiran Garaizar and Nerea Arrarte-ren Flexikuboa"/>
 <p style="margin:0;">
 </p></div>
 <div class="col-md-5" style="text-align:center;padding-top: 6%;">
-<img style="width:90%;" src="pikasle/g3.jpg" alt="Flexicube of Adiran Garaizar and Nerea Arrarte"/>
+<img style="width:90%;" src="pikasle/g3.jpg" alt="Adiran Garaizar and Nerea Arrarte-ren Flexikuboa"/>
 <p style="margin:0;">
 </p></div>
 </div>
@@ -622,18 +622,18 @@ El workshop fue organizado por Ricardo Grande y Josué Tonelli Cueto. Este tuvo 
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:60%;" src="pikasle/pi_card.png" alt="PI of clubs"/>
+<img style="width:60%;" src="pikasle/pi_card.png" alt="PI-ko hirusta"/>
 <p style="margin:0;">
 <em>$\pi$ko hirusta</em>,
 workshop-en logoa<br><small>(Josué Tonelli Cueto-ren diseinua)</small>
 </p>
 </div>
 <div class="col-md-4" style="text-align:center;padding-top: 6.5%;">
-<img style="width:90%;" src="pikasle/workshop2.jpg" alt="Juan Carlos Ruiz de Arcaute in the workshop"/>
+<img style="width:90%;" src="pikasle/workshop2.jpg" alt="Juan Carlos Ruiz de Arcaute tailerran"/>
 <p style="margin:0;">Juan Carlos Ruiz de Arcaute tailerran<br><small>(&copy;2014 Izaskun Lekuona)</small>
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 6.5%;">
-<img style="width:90%;" src="pikasle/workshop3.jpg" alt="Pedro Alegría in the workshop"/>
+<img style="width:90%;" src="pikasle/workshop3.jpg" alt="Pedro Alegría tailerran"/>
 <p style="margin:0;">Pedro Alegría tailerran
 </p></div>
 </div>
@@ -658,18 +658,18 @@ La revista obtuvo dos premios en reconocimiento a sus logros:
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<img style="width:90%;" src="pikasle/premio0.jpg" alt="Ricardo, Josué y Esther Domínguez, entonces decana de la ZTF-FCT, en la entrega de los III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU"/>
+<img style="width:90%;" src="pikasle/premio0.jpg" alt="Ricardo, Josué eta Esther Domínguez,<br>orduan ZTF-FCTko dekanoa zena, UPV/EHUren irudia zabaltzen lagundu duten ikasleak sarien banaketan"/>
 <p style="margin:0;">
 Ricardo, Josué eta Esther Domínguez,<br>orduan ZTF-FCTko dekanoa zena,<br>UPV/EHUren sari-banaketan
 </p>
 </div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/premio1.jpg" alt="Parte del equipo de $\pi$kasle en la entrega de los III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU"/>
+<img style="width:90%;" src="pikasle/premio1.jpg" alt="PIkasle-ren taldearen zati bat UPV/EHUren irudia zabaltzen lagundu duten ikasleak sarien banaketan"/>
 <p style="margin:0;">Parte del equipo de $\pi kasle$ren taldearen zati bat<br>UPV/EHUren sari-banaketan
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 9%;">
-<img style="width:90%;" src="pikasle/premio2.JPG" alt="Josué Tonelli Cueto recogiendo el premio de PIkasle en XIV Ciencia en Acción"/>
-<p style="margin:0;">Josué<br>XIV Ciencia en Acción-ren saribanaketan
+<img style="width:90%;" src="pikasle/premio2.JPG" alt="Josué Tonelli Cueto PIkasle-ren saria jasotzen XIV Ciencia en Acción-ren sari-banaketan"/>
+<p style="margin:0;">XIV Ciencia en Acción-ren saribanaketan<br/>Josué $\pi kasle$ren saria jasotzen
 </p></div>
 </div>
 
@@ -721,7 +721,7 @@ De este modo, al llegar al final de su primer año, la revista $\pi kasle$ se ha
 </div>
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design0.png"><img style="width:90%;" src="pikasle/design0.png" alt="Logo de PIkasle"/></a>
+<a href="pikasle/design0.png"><img style="width:90%;" src="pikasle/design0.png" alt="PIkasle-ren logoa (Maitane Amor-ek egina)"/></a>
 <p style="margin:0;">
 $\pi kasle$ren logoa<br><small>(Maitane Amor-en diseinua)</small>
 </p>
@@ -730,7 +730,7 @@ Este logo fue propuesto por Maitane Amor junto con el nombre, también propuesta
 </p></div>
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design4.jpg"><img style="width:90%;" src="pikasle/design4.jpg" alt="Pu&ntilde;o de Hierro en PIkasle"/></a>
+<a href="pikasle/design4.jpg"><img style="width:90%;" src="pikasle/design4.jpg" alt="Pu&ntilde;o de Hierro PIkasle-n"/></a>
 <p style="margin:0;">
 Julio García-ren kamisetarako<br>$\pi kasle$ren diseinu berezia
 </p>
@@ -744,7 +744,7 @@ Julio García, miembro del Comité Asesor de $\pi kasle$, era el encargado de ve
 <div class="row" style="padding-bottom:2em;">
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design1.jpg"><img style="width:90%;" src="pikasle/design1.jpg" alt="Paul Erd&ouml;s a la Warhol (by Josué Tonelli Cueto)"/></a>
+<a href="pikasle/design1.jpg"><img style="width:90%;" src="pikasle/design1.jpg" alt="Paul Erd&ouml;s a la Warhol (Josué Tonelli Cueto-k egina)"/></a>
 <p style="margin:0;">
 Paul Erdös <em>&agrave; la Warhol</em><br><small>(Josué Tonelli Cueto-ren diseinua)</small>
 </p>
@@ -753,7 +753,7 @@ Esta imagen fue la portada del séptimo número y del segundo número impreso de
 </p></div>
 
 <div id="designs" class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design2.png"><img style="width:90%;" src="pikasle/design2.png" alt="The Categoricist (by Josué Tonelli Cueto)"/></a>
+<a href="pikasle/design2.png"><img style="width:90%;" src="pikasle/design2.png" alt="The Categoricist (Josué Tonelli Cueto-k egina)"/></a>
 <p style="margin:0;padding-top:0.7em;">
 <em>The Categoricist</em><br><small>(Josué Tonelli Cueto-ren diseinua)</small>
 </p>
@@ -762,7 +762,7 @@ Esta figura fue la portada del noveno número y del tercer número impreso de $\
 </p></div>
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design3.png"><img style="width:90%;" src="pikasle/design3.png" alt="Doctor Delta (by Josué Tonelli Cueto)"/></a>
+<a href="pikasle/design3.png"><img style="width:90%;" src="pikasle/design3.png" alt="Doctor Delta (Josué Tonelli Cueto-k egina)"/></a>
 <p style="margin:0;padding-top:0.7em;">
 <em>Doctor Delta</em><br><small>(Josué Tonelli Cueto-ren diseinua)</small>
 </p>
@@ -777,7 +777,7 @@ Esta figura fue la contraportada del tercer número impreso de $\pi kasle$. Esta
 <br>
 <footer>
 <hr>
-  <p style="text-align:center;"><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.eu"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> $\pi kasle$-eduki guztia <a style="color:white;" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.eu">Creative Commons Aitortu-EzKomertziala-PartekatuBerdin 3.0 Moldatu gabea lizentzia</a> baten mende dago.<br>Josué Tonelli Cueto-egatiko testua, ??-egatiko itzulpena</p>
+  <p style="text-align:center;"><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.eu"><img alt="Creative Commons Lizentzia" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> $\pi kasle$-eduki guztia <a style="color:white;" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.eu">Creative Commons Aitortu-EzKomertziala-PartekatuBerdin 3.0 Moldatu gabea lizentzia</a> baten mende dago.<br>Josué Tonelli Cueto-egatiko testua, ??-egatiko itzulpena</p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
 
